InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/messages/becpg-project_fr.properties
@@ -24,6 +24,7 @@ becpg.forms.help.projectPriority                           = Champ \u00E0 titre 
 becpg.forms.help.projectSponsor                            = Personne qui porte le projet.
 becpg.forms.help.projectStartDate                          = Date de d\u00E9marrage du projet, le projet passera \u00E0 l'\u00E9tat en cours \u00E0 cette date.
 becpg.forms.help.projectState                              = Planifi\u00E9 : Projet non d\u00E9marr\u00E9<br/> En cours : Projet d\u00E9marr\u00E9<br/> En attente : Projet d\u00E9marr\u00E9 mais actuellement suspendu
+becpg.forms.help.scoreCriterionRange                       = Veuillez saisir les correspondances score-lettre dans le format suivant :\n- Chaque correspondance est s\u00E9par\u00E9e par une virgule `,`.\n- Associez une lettre \u00E0 un intervalle en utilisant le format `Lettre: Intervalle`.\n- D\u00E9finissez les bornes des intervalles comme suit :\n  - Utilisez `[` ou `]` pour inclure la borne.\n  - Utilisez `(` ou `)` pour exclure la borne.\n\nExemple valide : `A: (10;8], B: (8;6), C: [6;4]`.\n\nRemarque :\n1. Les bornes des intervalles doivent \u00EAtre sp\u00E9cifi\u00E9es dans un ordre d\u00E9croissant.\n2. Les intervalles doivent \u00EAtre contigus ou non chevauchants.\n3. V\u00E9rifiez que toutes les valeurs de score sont couvertes par les plages d\u00E9finies.\n
 becpg.forms.help.taskLegendSites                           = Ids de site s\u00E9par\u00E9s par des virgules.
 becpg.forms.help.tlBudgetRef                               = S\u00E9l\u00E9ctionner un \u00E9l\u00E9ment budget auquel on va rattacher la d\u00E9pense (par exemple : d\u00E9placement etc.).
 becpg.forms.help.tlDuration                                = Dur\u00E9e de la t\u00E2che.
@@ -49,8 +50,8 @@ becpg.forms.set.delegation.label                           = D\u00E9l\u00E9gatio
 becpg.forms.set.notification-email.label                   = Email
 becpg.forms.set.notification-filter.label                  = Filtres
 becpg.forms.set.notification-recurring.label               = R\u00E9currence
+becpg.forms.set.notification-report.label                  = Rapport
 becpg.forms.set.notification-rule.label                    = Notification
-becpg.forms.set.notification-report.label				   = Rapport
 becpg.forms.set.planning.label                             = Planning
 becpg.forms.set.project.label                              = Projet
 becpg.forms.set.reasign.label                              = R\u00E9assigner \u00E0
