--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/paths_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/paths_fr.properties
@@ -1,15 +1,16 @@
 
-path.logoimage.project = Projet
-path.project           = Projet
-path.project_hierarchy = Hi\u00E9rarchie des projets
-path.projectlists      = Listes projet
-path.projects          = Projets
-path.projecttemplates  = Mod\u00E8les de projet
-path.requestorigins    = Origines des demandes
-path.requeststates     = Etats des demandes
-path.resourcecosts     = Co\u00FBts des resources
-path.scorecriteria     = Crit\u00E8res d'\u00E9valuation
-path.sponsors          = Sponsors
-path.tasklegends       = L\u00E9gendes
-path.tasks             = T\u00E2ches
-path.timetypes         = Types de temps
+path.logoimage.project   = Projet
+path.project             = Projet
+path.project_hierarchy   = Hi\u00E9rarchie des projets
+path.projectlists        = Listes projet
+path.projects            = Projets
+path.projecttemplates    = Mod\u00E8les de projet
+path.requestorigins      = Origines des demandes
+path.requeststates       = Etats des demandes
+path.resourcecosts       = Co\u00FBts des resources
+path.scorecriteria       = Crit\u00E8res d'\u00E9valuation
+path.scorecriteriontypes = Types de crit\u00E8re d'\u00E9valuation
+path.sponsors            = Sponsors
+path.tasklegends         = L\u00E9gendes
+path.tasks               = T\u00E2ches
+path.timetypes           = Types de temps
