Fix #17973 - [Feature] Add 'beCPG.eco.max.wused.size' property, exclude Stopped, Refused and Archived from where used in change orders

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ecmModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/ecmModel_fr.properties
@@ -13,6 +13,7 @@ ecm_ecmmodel.association.ecm_rlTargetItem.title            = Cible
 ecm_ecmmodel.association.ecm_wulLink.title                 = Valeur actuelle
 ecm_ecmmodel.association.ecm_wulSourceItems.title          = El\u00E9ments impact\u00E9s
 ecm_ecmmodel.association.ecm_wulTargetItem.title           = El\u00E9ment cible
+ecm_ecmmodel.property.ecm_applyToAll.title                 = Appliquer \u00E0 tous
 ecm_ecmmodel.property.ecm_cclSourceValue.title             = Valeur source
 ecm_ecmmodel.property.ecm_cclTargetValue.title             = Valeur cible
 ecm_ecmmodel.property.ecm_culReqDetails.title              = D\u00E9tails des exigences
