InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -194,6 +194,7 @@ path.supplier_hierarchy                  = Hi\u00E9rarchie des fournisseurs
 path.supplierdocuments                   = Documents fournisseur
 path.supplierentities                    = Entit\u00E9s fournisseur
 path.suppliers                           = Fournisseurs
+path.surveyquestions                     = Questionnaires
 path.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
 path.targetmarkets                       = March\u00E9s cibles
 path.toxicities                          = Toxicit\u00E9s
