--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_en.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/surveyModel_en.properties
@@ -26,7 +26,6 @@ survey_surveymodel.association.survey_slChoices.title                 = Selected
 survey_surveymodel.association.survey_slQuestion.title                = Question
 survey_surveymodel.property.survey_fsLinkedTypes.title                = Entity types
 survey_surveymodel.property.survey_fsSurveyListName.title             = Survey list
-survey_surveymodel.property.survey_questionCriterion.title            = Criterion
 survey_surveymodel.property.survey_questionIsMandatory.title          = Mandatory ?
 survey_surveymodel.property.survey_questionIsVisible.title            = Visible ?
 survey_surveymodel.property.survey_questionLabel.title                = Label
@@ -39,6 +38,7 @@ survey_surveymodel.property.survey_questionUrl.title                  = Url
 survey_surveymodel.property.survey_responseCommentLabel.title         = Comment label
 survey_surveymodel.property.survey_responseCommentType.title          = Comment type
 survey_surveymodel.property.survey_responseType.title                 = Response type
+survey_surveymodel.property.survey_scoreCriterion.title               = Criterion
 survey_surveymodel.property.survey_slComment.title                    = Comment
 survey_surveymodel.property.survey_slResponse.title                   = Other response
 survey_surveymodel.type.survey_surveyList.description                 = Add survey to entity
