--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
@@ -20,6 +20,23 @@ listconstraint.pjt_observersEventTypes.TaskRefused     = Au refus d'une t\u00E2c
 listconstraint.pjt_observersEventTypes.TaskStart       = Au d\u00E9marrage d'une t\u00E2che (Observateurs)
 listconstraint.pjt_planningModes.Planning              = Planning
 listconstraint.pjt_planningModes.RetroPlanning         = R\u00E9troplanning
+listconstraint.pjt_projectOrigins.Sales_Department	   			= Service Commercial
+listconstraint.pjt_projectOrigins.Administration_des_ventes	   	= Administration des ventes
+listconstraint.pjt_projectOrigins.Service_Qualite	   			= Service Qualit\u00e9
+listconstraint.pjt_projectOrigins.Direction	   					= Direction
+listconstraint.pjt_projectOrigins.Service_Production	   		= Service Production
+listconstraint.pjt_projectOrigins.Marketing	   					= Marketing
+listconstraint.pjt_projectOrigins.Commerciaux	   				= Commerciaux
+listconstraint.pjt_projectOrigins.Clients	   					= Clients
+listconstraint.pjt_projectOrigins.Production	   				= Production
+listconstraint.pjt_projectSponsors.Client			   = Client
+listconstraint.pjt_projectSponsors.Suppliers		   = Fournisseur
+listconstraint.pjt_projectSponsors.Internal			   = Interne
+listconstraint.pjt_projectSponsors.Direction		   = Direction
+listconstraint.pjt_projectSponsors.Marketing		   = Marketing
+listconstraint.pjt_projectSponsors.Quality			   = Qualit\u00E9
+listconstraint.pjt_projectSponsors.Purchase			   = Achat
+listconstraint.pjt_projectSponsors.Supply			   = Supply
 listconstraint.pjt_projectStates.Cancelled             = Annul\u00E9
 listconstraint.pjt_projectStates.Completed             = Termin\u00E9
 listconstraint.pjt_projectStates.InProgress            = En cours
