Fix #26209 - [Feature] Display time in activities

--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
@@ -253,7 +253,9 @@ data.state.tovalidate                         = To validate
 data.state.treatment                          = Treatment
 data.state.valid                              = Valid
 
-date.format = mm/dd/yyyy
+date.format     = mm/dd/yyyy
+
+datetime.format = mm/dd/yyyy hh:MM
 
 entity.activity.after                  = After
 entity.activity.before                 = Before
