--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -252,7 +252,9 @@ data.state.tovalidate                         = A valider
 data.state.treatment                          = Traitement
 data.state.valid                              = Valid\u00E9
 
-date.format = dd/mm/yyyy
+date.format     = dd/mm/yyyy
+
+datetime.format = dd/mm/yyyy hh:MM
 
 entity.activity.after                  = Apr\u00E8s
 entity.activity.before                 = Avant
