Fix #25932 - [Bug] Improve 'beCPG.datalist.effectiveFilterEnabled' description

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -11,7 +11,7 @@ beCPG.connector.channel.register.activity.description          = Enregistrer les
 beCPG.copyOrBranch.propertiesToReset.description               = Permet de d\u00E9finir les propri\u00E9t\u00E9s et associations qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.copyOrBranch.typesToReset.description                    = Permet de d\u00E9finir les types qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.currency.supported.description                           = Permet de d\u00E9finir les devises support\u00E9es par le syst\u00E8me, s\u00E9par\u00E9es par des virgules
-beCPG.datalist.effectiveFilterEnabled.description              = Permet de filtrer les datalistes non effectives
+beCPG.datalist.effectiveFilterEnabled.description              = Si "true", le syst\u00E8me n'affiche pas les lignes non effectives dans les listes composition, emballage et process
 beCPG.defaultSearchTemplate.description                        = Permet de d\u00E9finir le mod\u00E8le de recherche par d\u00E9faut utilis\u00E9 par Alfresco
 beCPG.eco.automatic.apply.description                          = Permet de sp\u00E9cifier si l'ordre de modification automatique doit \u00EAtre appliqu\u00E9
 beCPG.eco.automatic.deleteOnApply.description                  = Permet de sp\u00E9cifier si les ordres de modification doivent \u00EAtre supprim\u00E9s apr\u00E8s avoir \u00E9t\u00E9 appliqu\u00E9s
