--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -11,7 +11,7 @@ beCPG.connector.channel.register.activity.description          = Register channe
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
 beCPG.copyOrBranch.typesToReset.description                    = Allows you to define type that will not be copy during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
-beCPG.datalist.effectiveFilterEnabled.description              = Allows you to filter non-effective datalists
+beCPG.datalist.effectiveFilterEnabled.description              = If "true", the system does not display non-effective lines in the composition, packaging and process lists
 beCPG.defaultSearchTemplate.description                        = Allows you to set the default search template used by Alfresco
 beCPG.eco.automatic.apply.description                          = Allows you to specify whether the automatic change order should be applied
 beCPG.eco.automatic.deleteOnApply.description                  = Allows you to specify whether change orders should be deleted after being applied
