InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
@@ -1,55 +1,55 @@
 
-listconstraint.pjt_allowedPriority.1                   = \u00C9lev\u00E9e
-listconstraint.pjt_allowedPriority.2                   = Moyenne
-listconstraint.pjt_allowedPriority.3                   = Basse
-listconstraint.pjt_deliverableStates.Closed            = Ferm\u00E9
-listconstraint.pjt_deliverableStates.Completed         = Termin\u00E9
-listconstraint.pjt_deliverableStates.InProgress        = En cours
-listconstraint.pjt_deliverableStates.Planned           = Planifi\u00E9
-listconstraint.pjt_dlScriptExecOrders.None             = Aucun
-listconstraint.pjt_dlScriptExecOrders.Post             = Post
-listconstraint.pjt_dlScriptExecOrders.Pre              = Pre
-listconstraint.pjt_manualDate.End                      = Fin
-listconstraint.pjt_manualDate.Start                    = D\u00E9but
-listconstraint.pjt_observersEventTypes.Comment         = Commentaire (Observateurs)
-listconstraint.pjt_observersEventTypes.NotifyDisabled  = Aucune (Ressources)
-listconstraint.pjt_observersEventTypes.NotifyOnRefused = Au refus d'une t\u00E2che (Ressources)
-listconstraint.pjt_observersEventTypes.Properties      = A la modification des propri\u00E9t\u00E9s (Observateurs)
-listconstraint.pjt_observersEventTypes.TaskEnd         = A la cl\u00F4ture d'une t\u00E2che (Observateurs)
-listconstraint.pjt_observersEventTypes.TaskRefused     = Au refus d'une t\u00E2che (Observateurs)
-listconstraint.pjt_observersEventTypes.TaskStart       = Au d\u00E9marrage d'une t\u00E2che (Observateurs)
-listconstraint.pjt_planningModes.Planning              = Planning
-listconstraint.pjt_planningModes.RetroPlanning         = R\u00E9troplanning
-listconstraint.pjt_projectOrigins.Sales_Department	   			= Service Commercial
-listconstraint.pjt_projectOrigins.Administration_des_ventes	   	= Administration des ventes
-listconstraint.pjt_projectOrigins.Service_Qualite	   			= Service Qualit\u00e9
-listconstraint.pjt_projectOrigins.Direction	   					= Direction
-listconstraint.pjt_projectOrigins.Service_Production	   		= Service Production
-listconstraint.pjt_projectOrigins.Marketing	   					= Marketing
-listconstraint.pjt_projectOrigins.Commerciaux	   				= Commerciaux
-listconstraint.pjt_projectOrigins.Clients	   					= Clients
-listconstraint.pjt_projectOrigins.Production	   				= Production
-listconstraint.pjt_projectSponsors.Client			   = Client
-listconstraint.pjt_projectSponsors.Suppliers		   = Fournisseur
-listconstraint.pjt_projectSponsors.Internal			   = Interne
-listconstraint.pjt_projectSponsors.Direction		   = Direction
-listconstraint.pjt_projectSponsors.Marketing		   = Marketing
-listconstraint.pjt_projectSponsors.Quality			   = Qualit\u00E9
-listconstraint.pjt_projectSponsors.Purchase			   = Achat
-listconstraint.pjt_projectSponsors.Supply			   = Supply
-listconstraint.pjt_projectStates.Cancelled             = Annul\u00E9
-listconstraint.pjt_projectStates.Completed             = Termin\u00E9
-listconstraint.pjt_projectStates.InProgress            = En cours
-listconstraint.pjt_projectStates.OnHold                = En attente
-listconstraint.pjt_projectStates.Planned               = Planifi\u00E9
-listconstraint.pjt_taskStates.Cancelled                = Annul\u00E9
-listconstraint.pjt_taskStates.Completed                = Termin\u00E9
-listconstraint.pjt_taskStates.InProgress               = En cours
-listconstraint.pjt_taskStates.OnHold                   = En attente
-listconstraint.pjt_taskStates.Planned                  = Planifi\u00E9
-listconstraint.pjt_taskStates.Refused                  = Refus\u00E9
-listconstraint.pjt_worflowTransitions.refused          = Refuser
-listconstraint.pjt_worflowTransitions.validate         = T\u00E2che termin\u00E9e
+listconstraint.pjt_allowedPriority.1                        = \u00C9lev\u00E9e
+listconstraint.pjt_allowedPriority.2                        = Moyenne
+listconstraint.pjt_allowedPriority.3                        = Basse
+listconstraint.pjt_deliverableStates.Closed                 = Ferm\u00E9
+listconstraint.pjt_deliverableStates.Completed              = Termin\u00E9
+listconstraint.pjt_deliverableStates.InProgress             = En cours
+listconstraint.pjt_deliverableStates.Planned                = Planifi\u00E9
+listconstraint.pjt_dlScriptExecOrders.None                  = Aucun
+listconstraint.pjt_dlScriptExecOrders.Post                  = Post
+listconstraint.pjt_dlScriptExecOrders.Pre                   = Pre
+listconstraint.pjt_manualDate.End                           = Fin
+listconstraint.pjt_manualDate.Start                         = D\u00E9but
+listconstraint.pjt_observersEventTypes.Comment              = Commentaire (Observateurs)
+listconstraint.pjt_observersEventTypes.NotifyDisabled       = Aucune (Ressources)
+listconstraint.pjt_observersEventTypes.NotifyOnRefused      = Au refus d'une t\u00E2che (Ressources)
+listconstraint.pjt_observersEventTypes.Properties           = A la modification des propri\u00E9t\u00E9s (Observateurs)
+listconstraint.pjt_observersEventTypes.TaskEnd              = A la cl\u00F4ture d'une t\u00E2che (Observateurs)
+listconstraint.pjt_observersEventTypes.TaskRefused          = Au refus d'une t\u00E2che (Observateurs)
+listconstraint.pjt_observersEventTypes.TaskStart            = Au d\u00E9marrage d'une t\u00E2che (Observateurs)
+listconstraint.pjt_planningModes.Planning                   = Planning
+listconstraint.pjt_planningModes.RetroPlanning              = R\u00E9troplanning
+listconstraint.pjt_projectOrigins.Administration_des_ventes = Administration des ventes
+listconstraint.pjt_projectOrigins.Clients                   = Clients
+listconstraint.pjt_projectOrigins.Commerciaux               = Commerciaux
+listconstraint.pjt_projectOrigins.Direction                 = Direction
+listconstraint.pjt_projectOrigins.Marketing                 = Marketing
+listconstraint.pjt_projectOrigins.Production                = Production
+listconstraint.pjt_projectOrigins.Sales_Department          = Service Commercial
+listconstraint.pjt_projectOrigins.Service_Production        = Service Production
+listconstraint.pjt_projectOrigins.Service_Qualite           = Service Qualit\u00E9
+listconstraint.pjt_projectSponsors.Client                   = Client
+listconstraint.pjt_projectSponsors.Direction                = Direction
+listconstraint.pjt_projectSponsors.Internal                 = Interne
+listconstraint.pjt_projectSponsors.Marketing                = Marketing
+listconstraint.pjt_projectSponsors.Purchase                 = Achat
+listconstraint.pjt_projectSponsors.Quality                  = Qualit\u00E9
+listconstraint.pjt_projectSponsors.Suppliers                = Fournisseur
+listconstraint.pjt_projectSponsors.Supply                   = Supply
+listconstraint.pjt_projectStates.Cancelled                  = Annul\u00E9
+listconstraint.pjt_projectStates.Completed                  = Termin\u00E9
+listconstraint.pjt_projectStates.InProgress                 = En cours
+listconstraint.pjt_projectStates.OnHold                     = En attente
+listconstraint.pjt_projectStates.Planned                    = Planifi\u00E9
+listconstraint.pjt_taskStates.Cancelled                     = Annul\u00E9
+listconstraint.pjt_taskStates.Completed                     = Termin\u00E9
+listconstraint.pjt_taskStates.InProgress                    = En cours
+listconstraint.pjt_taskStates.OnHold                        = En attente
+listconstraint.pjt_taskStates.Planned                       = Planifi\u00E9
+listconstraint.pjt_taskStates.Refused                       = Refus\u00E9
+listconstraint.pjt_worflowTransitions.refused               = Refuser
+listconstraint.pjt_worflowTransitions.validate              = T\u00E2che termin\u00E9e
 
 pjt_pjtmodel.aspect.pjt_budgetAspect.title                  = Aspect budget
 pjt_pjtmodel.aspect.pjt_completionAspect.title              = % R\u00E9alis\u00E9
@@ -136,11 +136,11 @@ pjt_pjtmodel.property.pjt_rlPriority.title                  = Priorit\u00E9
 pjt_pjtmodel.property.pjt_rlState.title                     = Etat de la demande
 pjt_pjtmodel.property.pjt_scoreCriterionDetailFormula.title = Formule du d\u00E9tail
 pjt_pjtmodel.property.pjt_scoreCriterionFormula.title       = Formule du crit\u00E8re
-pjt_pjtmodel.property.pjt_scoreCriterionRange.title         = = Classement
+pjt_pjtmodel.property.pjt_scoreCriterionRange.title         = Classement
 pjt_pjtmodel.property.pjt_scoreCriterionRangeFormula.title  = Formule du classement
 pjt_pjtmodel.property.pjt_scoreCriterionType.title          = Type de crit\u00E8re
 pjt_pjtmodel.property.pjt_scoreCriterionWeight.title        = % Pond\u00E9ration
-pjt_pjtmodel.property.pjt_slCriterion.title                 = Type de crit\u00E8re
+pjt_pjtmodel.property.pjt_slCriterion.title                 = Type
 pjt_pjtmodel.property.pjt_slScore.title                     = % Note
 pjt_pjtmodel.property.pjt_slScoreDetail.title               = D\u00E9tails
 pjt_pjtmodel.property.pjt_slScoreRange.title                = Classement
