InProgress #23194 - [Feature] Add score list characts and formula

--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/model/projectModel_fr.properties
@@ -136,12 +136,13 @@ pjt_pjtmodel.property.pjt_rlPriority.title                  = Priorit\u00E9
 pjt_pjtmodel.property.pjt_rlState.title                     = Etat de la demande
 pjt_pjtmodel.property.pjt_scoreCriterionDetailFormula.title = Formule du d\u00E9tail
 pjt_pjtmodel.property.pjt_scoreCriterionFormula.title       = Formule du crit\u00E8re
+pjt_pjtmodel.property.pjt_scoreCriterionFormulated.title    = Est formul\u00E9 ?
 pjt_pjtmodel.property.pjt_scoreCriterionRange.title         = Classement
 pjt_pjtmodel.property.pjt_scoreCriterionRangeFormula.title  = Formule du classement
 pjt_pjtmodel.property.pjt_scoreCriterionType.title          = Type de crit\u00E8re
 pjt_pjtmodel.property.pjt_scoreCriterionWeight.title        = % Pond\u00E9ration
 pjt_pjtmodel.property.pjt_slCriterion.title                 = Type
-pjt_pjtmodel.property.pjt_slScore.title                     = % Note
+pjt_pjtmodel.property.pjt_slScore.title                     = Note/100
 pjt_pjtmodel.property.pjt_slScoreDetail.title               = D\u00E9tails
 pjt_pjtmodel.property.pjt_slScoreRange.title                = Classement
 pjt_pjtmodel.property.pjt_slScreening.title                 = Projections
