--- a/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/project-messages_fr.properties
+++ b/becpg-project/becpg-project-core/src/main/resources/alfresco/module/becpg-project-core/messages/project-messages_fr.properties
@@ -11,6 +11,8 @@ fr.becpg.project.deliverable-state = {1} a chang\u00E9 l''\u00E9tat du livrable 
 fr.becpg.project.project-state     = {1} a chang\u00E9 l''\u00E9tat du projet {0} de  {2} \u00E0 {3}
 fr.becpg.project.task-state        = {1} a chang\u00E9 l''\u00E9tat de la t\u00E2che {0} de  {2} \u00E0 {3}
 
+message.formulate.scoreList.error = Erreur lors de la formulation de l''\u00E9l\u00E9ment ''{0}'': - {1}
+
 path.exportprojects = Export des projets
 
 project-activity.activityEvent = Type d'\u00E9v\u00E9nement
