Fix #23194 - [Feature] Add score list characts and formula

--- a/becpg-integration-runner/src/test/resources/beCPG/translations/plm.properties
+++ b/becpg-integration-runner/src/test/resources/beCPG/translations/plm.properties
@@ -128,6 +128,7 @@ message.formulate.formula.error                       = Error in formula ''{0}''
 message.formulate.formula.incorrect.nutrientProfile   = Error calculating nutrient profile : {0}
 message.formulate.formula.incorrect.type.boolean      = Formula doesn't return boolean
 message.formulate.formula.incorrect.type.double       = Formula doesn't return double
+message.formulate.formula.incorrect.type.string       = Formula doesn't return string
 message.formulate.formula.toolong                     = Too many elements for the multilevel calculation of the formula ''{0}''
 message.formulate.incorrect.ingList.total             = Total of ingredients is not 100%
 message.formulate.info.nut.notInRangeValue.AsPrepared = The nutrient {0} (prepared value: {1}) is not in specification range ({2}expected value{3})
