--- a/becpg-integration-runner/src/test/resources/beCPG/translations/plm_fr.properties
+++ b/becpg-integration-runner/src/test/resources/beCPG/translations/plm_fr.properties
@@ -128,6 +128,7 @@ message.formulate.formula.error                       = Erreur dans la formule '
 message.formulate.formula.incorrect.nutrientProfile   = Erreur dans le calcul du profil nutritionnel : {0}
 message.formulate.formula.incorrect.type.boolean      = La formule doit retourner un bool\u00E9en
 message.formulate.formula.incorrect.type.double       = La formule doit retourner un double
+message.formulate.formula.incorrect.type.string       = La formule doit retourner un string
 message.formulate.formula.toolong                     = Trop d'\u00E9l\u00E9ments pour le calcul multiniveau de la formule ''{0}''
 message.formulate.incorrect.ingList.total             = Le total des ingr\u00E9dients ne fait pas 100%
 message.formulate.info.nut.notInRangeValue.AsPrepared = Le nutriment {0} (valeur pr\u00E9par\u00E9: {1}) ne respecte pas le cahier des charges ({2}valeur attendue{3})
