--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_fr.properties
@@ -257,7 +257,7 @@ data.state.valid                              = Valid\u00E9
 
 date.format     = dd/mm/yyyy
 
-datetime.format = dd/mm/yyyy hh:MM
+datetime.format = dd/mm/yyyy HH:MM
 
 entity.activity.after                  = Apr\u00E8s
 entity.activity.before                 = Avant
