--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -54,6 +54,8 @@ button.wused                    = Cas d'emploi
 dashlet.my-olapchart.description = Composant permettant d'afficher un graphique BI
 dashlet.my-olapchart.shortName   = Graphique BI
 
+datetime.format = dd/mm/yyyy HH:MM
+
 details.effectivity.from   = Valide depuis {0}
 details.effectivity.fromto = Valide du {0} au {1}
 details.effectivity.none   = Aucune effectivit\u00E9
