--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/modules/entity-datagrid/entity-datagrid.get_en_US.properties
@@ -255,7 +255,7 @@ data.state.valid                              = Valid
 
 date.format     = mm/dd/yyyy
 
-datetime.format = mm/dd/yyyy hh:MM
+datetime.format = mm/dd/yyyy hh:MM tt
 
 entity.activity.after                  = After
 entity.activity.before                 = Before
