--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_en.properties
@@ -53,6 +53,8 @@ entity-datalist-wused-description = Where used
 
 entity-datalist-wused-title = Where used
 
+entity.datalist.item.details.maxs           = Maximums
+entity.datalist.item.details.mins           = Minimums
 entity.datalist.item.details.total          = Total
 entity.datalist.item.details.totals         = Totals
 #Entity Data List Item Details
