--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -48,6 +48,8 @@ entity-datalist-wused-description = Liste des cas d'emplois
 
 entity-datalist-wused-title = Cas d'emplois
 
+entity.datalist.item.details.maxs           = Maximums
+entity.datalist.item.details.mins           = Minimums
 entity.datalist.item.details.total          = Total
 entity.datalist.item.details.totals         = Totaux 
 #Entity Data List Item Details
