--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_en.properties
@@ -119,6 +119,8 @@ menu.basket.empty                           = Empty basket
 menu.basket.show                            = Show basket
 menu.create-content.entity                  = Entity...
 menu.create-content.externalLink            = External link...
+menu.selected-items.assign-process          = Start process...
+menu.selected-items.basket                  = Add to basket
 menu.selected-items.lock                    = Lock item(s)
 menu.selected-items.quick-share             = Share documents
 menu.selected-items.unlock                  = Unlock item(s)
