Fix #26039 - [I18N] Move i18n key in core

--- a/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/messages/becpg-share_fr.properties
@@ -109,13 +109,15 @@ linkshare.action.google-plus.label = Partager via Google+
 linkshare.action.twitter.label     = Partager via Twitter
 linkshare.action.twitter.message   = Fichier {1} partag\u00E9 via beCPG
 
-menu.basket.empty                = Vider le panier
-menu.basket.show                 = Afficher le panier
-menu.create-content.entity       = Entit\u00E9...
-menu.create-content.externalLink = Lien externe...
-menu.selected-items.lock         = Verrouiller le(s) ligne(s)
-menu.selected-items.quick-share  = Partager les documents
-menu.selected-items.unlock       = D\u00E9verrouiller le(s) ligne(s)
+menu.basket.empty                  = Vider le panier
+menu.basket.show                   = Afficher le panier
+menu.create-content.entity         = Entit\u00E9...
+menu.create-content.externalLink   = Lien externe...
+menu.selected-items.assign-process = D\u00E9marrer un processus...
+menu.selected-items.basket         = Ajouter au panier
+menu.selected-items.lock           = Verrouiller le(s) ligne(s)
+menu.selected-items.quick-share    = Partager les documents
+menu.selected-items.unlock         = D\u00E9verrouiller le(s) ligne(s)
 
 message.annotation-cancel.failure             = Impossible d'annuler les annotations
 message.annotation-cancel.inprogress          = Annulation des annotations
